# meridian

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  Makefile  PRD.md  README.md  SECURITY.md  docker-compose.yml  epic_plan.md  fix.txt  mkdocs.yml  plan.md  plan.txt  prometheus.yml  pyproject.toml  pytest.ini  ui.md
.github/workflows/: ci.yml  gtm-digest.yml  nightly-quickstart.yml  release.yml  test-coverage.yml  weekly-gtm-validation.yml
docs/: _config.yml  architecture.md  changelog.md  comparisons.md  compliance-guide.md  context-accountability.md  context-assembly.md  context-store.md  faq.md  feast-alternative.md  feature-store-without-kubernetes.md  freshness-sla.md  glossary.md  hooks.md  hybrid-features.md  index.md  integrity-and-verification.md  local-to-production.md  philosophy.md  quickstart.md  rag-audit-trail.md  robots.txt  sitemap.xml  troubleshooting.md  unit_testing.md  webui.md  why-we-built-fabra.md  why-we-built-meridian.md
docs-site/: package-lock.json  package.json
docs-site/public/: sitemap.xml
docs/adr/: 0001-record-architecture-decisions.md
docs/blog/: ai-audit-trail.md  context-assembly.md  context-replay.md  deploy-without-kubernetes.md  fabra-vs-context-platforms.md  feast-alternative.md  feast-too-complex.md  feature-store-for-startups.md  freshness-guarantees.md  local-feature-store.md  pgvector-vs-pinecone.md  point-in-time-features.md  python-decorators-ml.md  rag-compliance-fintech.md  rag-compliance-healthcare.md  rag-without-langchain.md  token-budget-management.md
docs/use-cases/: churn-prediction.md  fraud-detection.md  real-time-recommendations.md
examples/: basic_features.py  benchmark_cache.py  production_context.py  quickstart.py  rag_chatbot.py
examples/fraud_detection/: README.md  features.py  main.py
examples/production/: docker-compose.prod.yml  prod_app.py
playground/: package-lock.json  package.json
scripts/: ci_parity.sh  test_30_second_quickstart.sh  uat_smoke.py  validate_gtm_checks.sh
scripts/ci/: quickstart_smoke.py
src/fabra/: __init__.py  cli.py  context.py  models.py
src/meridian/: __init__.py  bus.py  cli.py  config.py  context.py  core.py  doctor.py  embeddings.py  events.py  exceptions.py  graph.py  hooks.py  index.py  observability.py  retrieval.py  scheduler.py  ui.py  (+4 more)
tests/: conftest.py  test_assembly_tracking.py  test_compare_records.py  test_freshness_sla.py  test_version.py
(+92 files in other folders)
