[project]
name = "meridian-oss"
version = "1.1.0"
description = "Heroku for ML Features"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Meridian Contributors", email = "hello@meridian.io" }
]
keywords = ["feature-store", "machine-learning", "mlops", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "duckdb>=0.10.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
    "sqlglot>=18.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "pybreaker>=1.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/davidahmann/meridian"
Repository = "https://github.com/davidahmann/meridian"
Documentation = "https://github.com/davidahmann/meridian#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-redis",
    "types-sqlalchemy",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "pre-commit>=3.5.0",
    "testcontainers>=3.7.1",
    "pandas-stubs>=2.0.0",
    "httpx>=0.24.0",
    "prometheus-client>=0.17.0",
    "pytest-asyncio>=0.23.0",
]
ui = [
    "streamlit",
    "watchdog",
]

[project.scripts]
meridian = "meridian.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "testcontainers.*",
    "duckdb.*",
    "prometheus_client.*",
    "streamlit.*"
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
